<resources>
    <string name="app_name">BloodGo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom_navigation">bottom_navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signInContinueone">By continuing you agree to the</string>
    <string name="signInContinuetwo"><![CDATA[Terms & Conditions and Privacy Policy]]></string>
    <string name="sign_in_cancelled">Sign In Process was cancelled</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="unknown_error">Is your Internet Off? if not then Something went wrong, Please try again later.</string>
    <string name="Condition">In order to register and use our services as a donor, Clients have to meet the following requirements</string>
    <string name="Contion1">1) Weigh at least 45 kilograms or more.</string>
    <string name="Condition2">2) Have stayed a period of at least 3 or more months.</string>
    <string name="Condition3">3)\tSound health and no transmissible disease recently.</string>
    <string name="Condition4">4) Hemoglobin levels of 12.5 gm% minimum.</string>
    <string name="Condition5">5)\tBe within the Age group of 18-60 years</string>
    <string name="Condition6">6)\tMen can give blood every 12 weeks and women can give blood every 16 weeks</string>
    <string name="title_activity_maps">Map</string>
</resources>
